# assyst

./: .gitignore  .readthedocs.yaml  AGENTS.md  CLAUDE.md  README.md  codecov.yml  pyproject.toml
.github/workflows/: claude.yml  codecov.yml  pypi-publish.yml  test-minimum-deps.yml  unittest.yml
.hypothesis/constants/: 08619d69382553bc  0cb1f68a998c7cd8  216a0657b94df49d  3b770a3b75ff42d7  3f52f29649409e06  477d73186e80a72f  5b102177809c119d  6bb338729492055b  7c67d52df203b3d1  9511ed8b058788a3  b0af7c8e723f3a0f  da39a3ee5e6b4b0d
assyst/: _version.py  calculators.py  crystals.py  filters.py  neighbors.py  perturbations.py  phases.py  plot.py  relax.py  relaxations.py  structures.py  utils.py  workflow.py
assyst.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: assyst.rst  background.rst  conf.py  custom_relaxer.rst  design.rst  filters.rst  formulas.rst  index.rst  installation.rst  lineage.rst  metadata.rst  notebooks.rst  overview.rst
docs/api/: calculators.rst  crystals.rst  filters.rst  index.rst  perturbations.rst  plot.rst  relax.rst  relaxations.rst  workflow.rst
notebooks/: ACEFitting.ipynb  Lineage.ipynb  Perturbations.ipynb  PlotGallery.ipynb  Relaxations.ipynb  SimpleUnary.ipynb
notebooks/Quickstart/: Crystals.ipynb
notebooks/data/: generate.py  plot_gallery.pkl
paper/: codemeta.json  paper.bib  paper.md
tests/: conftest.py  test_crystal.py  test_perturbations.py  test_perturbations_retry.py  test_phases.py  test_pickle.py  test_plot.py  test_relax.py  test_reproducibility.py  test_structures.py  test_utils.py  test_workflow.py
(+19 files in other folders)
