[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["assyst"]

[tool.setuptools_scm]
version_file = "assyst/_version.py"

[tool.ruff]
line-length = 120

[project]
name = "assyst"
description = "Reference implentation of the Automated Small Symmetric Structure Training method."
dynamic = ["version"]
authors = [
    { name="Marvin Poul", email="pmrv@posteo.de" },
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
#license-file = ["LICENSE"]
dependencies = [
    "pyxtal>=1.0.1,<1.2.0",
    "tqdm>=4.31,<5",
    "ase>=3.24,<4",
    "matplotlib>=3.8,<4",
    "seaborn>=0.13,<1",
    "pandas>=2.2,<4",
    "numpy>=1.26,<3",
    "pyiron_snippets>=1,<2",
]

[project.optional-dependencies]
test = ["pytest>=7.4", "hypothesis>=6.71"]
doc = ["sphinx", "furo", "myst-nb"]
coverage = ["pytest>=7.4", "hypothesis>=6.71", "pytest-cov"]
grace = ["tensorpotential>=0.5.1,<0.5.10"]
plotneighborlist = ["matscipy>=1,<2"]
notebooks = ["tensorpotential>=0.5.1,<0.5.10", "pandas>=2.2,<4",]

[project.urls]
Repository = "https://github.com/eisenforschung/assyst"
